fix navbar collapse and breadcrumb

--- a/src/public/styles/_card.scss
+++ b/src/public/styles/_card.scss
@@ -1,11 +1,8 @@
 .card {
-  width: 25rem;
-  height: 12rem;
+  width: 30rem;
+
   .list-group-item {
     font-size: 0.5rem;
-  }
-  .card-text {
-    font-size: 0.75rem;
   }
   .container {
     margin: 1rem 0.3rem;
